--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
       - run: go test -v -short --count=1 $(go list ./...)
   
   build-app-karsajobs:
+    executor: docker/machine
     steps:
       - checkout
       - run: sh ./build_push_image_karsajobs.sh
