--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,7 @@ jobs:
     executor: docker/machine
     steps:
       - checkout
+      - run: export USERNAME_DOCKER_HUB="<USERNAME CONTAINER REGISTER>"
       - run: sh ./build_push_image_karsajobs.sh
 
 workflows:
