--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,7 @@ jobs:
           command: sh ./build_push_image_karsajobs.sh
           environment: 
             USERNAME_DOCKER_HUB: "<USERNAME CONTAINER REGISTER>"
+            PASSWORD_DOCKER_HUB: "<PASSWORD CONTAINER REGISTER>"
 
 workflows:
   lint-dockerfile:
