--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,8 +62,8 @@ jobs:
       - run: 
           command: sh ./build_push_image_karsajobs.sh
           environment: 
-            USERNAME_DOCKER_HUB: "<USERNAME CONTAINER REGISTER>"
-            PASSWORD_DOCKER_HUB: "<PASSWORD CONTAINER REGISTER>"
+            USERNAME_DOCKER_HUB: $USERNAME_DOCKER_HUB
+            PASSWORD_DOCKER_HUB: $PASSWORD_DOCKER_HUB
 
 workflows:
   lint-dockerfile:
