--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
       - run: go test -v -short --count=1 $(go list ./...)
   
   build-app-karsajobs:
+    context: main-context
     executor: docker/machine
     steps:
       - checkout
